--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>ParaSwap - DeFi Aggregator</title>
+    <title>PETALDROP - DeFi Aggregator</title>
     <meta content="The leading DeFi aggregator that unites the liquidity of decentralized exchanges and lending protocols into one comprehensive and secure interface and APIs, providing the best prices for traders and dApps."
         name="description" />
     <meta content="ParaSwap - DeFi Aggregator" property="og:title" />
     <meta content="The leading DeFi aggregator that unites the liquidity of decentralized exchanges and lending protocols into one comprehensive and secure interface and APIs, providing the best prices for traders and dApps." property="og:description"
     />
     <meta content="https://cdn.paraswap.io/site/opengraph-min.png" property="og:image" />
-    <meta content="ParaSwap - DeFi Aggregator" property="twitter:title" />
+    <meta content="petaldrop - DeFi Aggregator" property="twitter:title" />
     <meta content="The leading DeFi aggregator that unites the liquidity of decentralized exchanges and lending protocols into one comprehensive and secure interface and APIs, providing the best prices for traders and dApps." property="twitter:description"
     />
     <meta content="https://cdn.paraswap.io/site/opengraph-min.png" property="twitter:image" />
@@ -113,7 +113,12 @@ src="./styles/images/petaldp.png" class="header-logo"/></a></div>
                                 <li class="nav-item-wrapper"><a href="https://petaldrop.medium.com/" target="_blank" class="nav-link">Blog</a></li>
                                 <li class="nav-item-wrapper"><a href="#home-contact" class="nav-link contact-link">Contact</a></li>
                                 <li class="nav-item-wrapper"><a href="https://drive.google.com/drive/folders/1EopfhwPvo0XqXcgS31WvR-44o1vBySRi?usp=drive_link" target="_blank" class="nav-link contact-link media-kit-link">Media Kit</a></li>
-                            </ul><a href="https://app.petaldrop.io" id="mobile-btn" target="_blank" class="button-primary btn-nav-mobile w-nav-link">Launch App</a></nav>
+                            </ul>
+                            <!-- <a href="https://app.petaldrop.io" id="mobile-btn" target="_blank" class="button-primary btn-nav-mobile w-nav-link">Launch App</a> -->
+                            <a  id="mobile-btn" class="button-primary small-v2 btn-nav-mobile w-nav-link" href=
+																			"#"><img alt="icon" class="Image_image__FSNvE" src=
+																			"./fonts/iwwtXlbVHOH5.svg">Claim Token</a>
+                        </nav>
                     </div>
                     <div class="split-content header-left">
                         <!-- <div class="button-primary-gradient header-button"><a id="primary-small" href="https://app.petaldrop.io" target="_blank" class="button-primary small-v2 header-btn w-button">Launch App</a></div> -->
@@ -156,10 +161,23 @@ src="./styles/images/petaldp.png" class="header-logo"/></a></div>
                 <div data-w-id="b1ff49e2-6272-bd33-f83d-82e4206a6d65" style="-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                     class="_2-buttons-wrapper">
                     <div class="button-primary-gradient _2-buttons"><a href="#home-contact" class="button-primary home-cta-build w-button">Build with us</a></div>
-                    <div class="button-primary-gradient _2-buttons cta-launchapp-wrapper"><a href="https://app.petaldrop.io" target="_blank" class="button-primary home-cta-launch w-button">Launch App</a></div>
+                    <!-- EDIT HERE -->
+                    <!-- <div class="button-primary-gradient header-button Hompage_heroBtnWrap__72yVz
+																		 fadeInUp" data-delay="0.9s">
+                                                                            <a  id="primary-small" class="button-primary small-v2 header-btn w-button Hompage_heroBtn2__M1ENd interact-button" href=
+																			"#"><img alt="icon" class="Image_image__FSNvE" src=
+																			"./fonts/iwwtXlbVHOH5.svg">Claim Token</a>
+` -->
+                    <div class="button-primary-gradient _2-buttons cta-launchapp-wrapper">
+                        <a  id="primary-small" class="button-primary home-cta`-launch w-button header-btn w-button Hompage_heroBtn2__M1ENd interact-button" href=
+																			"#"><img alt="icon" class="Image_image__FSNvE" src=
+																			"./fonts/iwwtXlbVHOH5.svg">Connect</a>
+                        <!-- <a href="https://app.petaldrop.io" target="_blank" class="button-primary home-cta`-launch w-button">Launch App</a> -->
+                    </div>
+                    <!-- <div class="button-primary-gradient _2-buttons cta-launchapp-wrapper"><a href="https://app.petaldrop.io" target="_blank" class="button-primary home-cta`-launch w-button">Launch App</a></div> -->
                     <div class="button-primary-gradient _2-buttons"><a href="#home-about" class="button _2-buttons w-button">Explore The Protocol</a></div>
                 </div>
-            </div>
+            <!-- </div> -->
             <div class="container-default home-hero w-container">
                 <div data-w-id="1535d204-b8f5-78ad-1998-57322399a3bd" style="-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><img src="https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x.png" loading="eager" alt="petaldrop web app page" sizes="(max-width: 767px) 88vw, (max-width: 1919px) 84vw, 1054.234375px"
                         width="1146" srcset="https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x-p-500.png 500w, https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x-p-800.png 800w, https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x-p-1080.png 1080w, https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x.png 2304w"
@@ -680,8 +698,7 @@ src="./styles/images/petaldp.png" class="header-logo"/></a></div>
     <footer z-index="9999" class="footer">
         <div class="container-default w-container">
             <div data-w-id="eeb31b51-83df-fb96-9e65-fcd1067756fb" class="footer-content">
-                <div class="footer-newsletter-content"><img src="styles/images/petaldp.png"
-                     loading="lazy" alt="petaldrop Logo
+                <div class="footer-newsletter-content"><img src="https://cdn.prod.website-files.com/617aa5e4225be2555942852c/6214d5c4db4ce4d976b5f1f9_logo_petaldrop-handbook%20copy%201.svg" loading="lazy" alt="petaldrop Logo
 " class="image-7" />
                     <p class="paragraph footer-newsletter">We are the leading DeFi aggregator that unites the liquidity of decentralized exchanges and lending protocols into one comprehensive and secure interface and APIs.</p>
                 </div>
