--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@ src="./styles/images/petaldp.png" class="header-logo"/></a></div>
                     <div class="button-primary-gradient _2-buttons"><a href="#home-about" class="button _2-buttons w-button">Explore The Protocol</a></div>
                 </div>
             <!-- </div> -->
-            <div class="container-default home-hero w-container">
+<!--             <div class="container-default home-hero w-container">
                 <div data-w-id="1535d204-b8f5-78ad-1998-57322399a3bd" style="-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><img src="https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x.png" loading="eager" alt="petaldrop web app page" sizes="(max-width: 767px) 88vw, (max-width: 1919px) 84vw, 1054.234375px"
                         width="1146" srcset="https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x-p-500.png 500w, https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x-p-800.png 800w, https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x-p-1080.png 1080w, https://cdn.prod.website-files.com/617aa5e4225be2555942852c/623863c59d3f5e9069970257_petaldrop%20screenshot%402x.png 2304w"
                         class="image home-hero-1" /></div>
-            </div>
+            </div> -->
         </section>
         <section id="home-about" class="section home-features">
             <div data-w-id="62f6c10d-ee2c-bcd9-13a2-11c6d148edf6" style="opacity:1" class="container-medium-756px home-features">
