--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ src="./styles/images/petaldp.png" class="header-logo"/></a></div>
                     class="paragraph-large home-hero">We are the leading DeFi aggregator that unites the liquidity of decentralized exchanges and lending protocols into one comprehensive and secure interface and APIs.</p>
                 <div data-w-id="b1ff49e2-6272-bd33-f83d-82e4206a6d65" style="-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                     class="_2-buttons-wrapper">
-                    <div class="button-primary-gradient _2-buttons"><a href="#home-contact" class="button-primary home-cta-build w-button">Build with us</a></div>
+<!--                     <div class="button-primary-gradient _2-buttons"><a href="#home-contact" class="button-primary home-cta-build w-button">Build with us</a></div> -->
                     <!-- EDIT HERE -->
                     <!-- <div class="button-primary-gradient header-button Hompage_heroBtnWrap__72yVz
 																		 fadeInUp" data-delay="0.9s">
